Changes file for DateTime::Incomplete

- "contains" takes the time_zone into account
- fixed "strftime" of incomplete datetimes

0.00_07  2003-07-25
- set_time_zone / set_locale test for undef args
- strftime
- time_zone_long_name
- today / now / from_epoch / from_object / from_day_of_year

0.00_06  2003-07-25
- DateTime methods:
 week week_year week_number week_of_month day_name day_abbr day_of_week wday dow day_of_year doy quarter day_of_quarter doq weekday_of_month jd mjd is_leap_year ce_year era year_with_era last_day_of_month month_name month_abbr hour_1 hour_12 hour_12_0 fractional_second millisecond microsecond offset time_zone_short_name
- base_class / has_base
- added example on how to use "truncate" to generate smaller
  recurrence sets.

0.00_05  2003-07-24
- next/previous "february" problem fixed.
- set( day => undef ) would break if there was a base date.
  Reported by Dave Rolsky
- t/02incomplete.t SKIPs tests properly, when DT::Recurrence
  is not installed
- locale, set_locale
- some aliases added, for DateTime compatibility

0.00_04  2003-07-22
-  base
-  next / previous / closest
-  has_hour, has_month, ...
-  has(), get()

0.00_03  2003-07-21
-  New API: new( ..., base => $dt )
            set_base( $dt )
            to_datetime() without base
-  Implemented to_recurrence
-  Implemented is_undef, to_datetime, contains
-  All methods in DATETIME-LIKE section are implemented. Most are tested.

0.00_02  2003-07-19
-  POD, makefile and CVS upload.

0.00_01  2003-07-17
-  02incomplete.t created.
