@@ -1,6 +1,7 @@
 TODO file for DateTime::Incomplete
 
-- fix "contains" to use time_zone info.
+- test Storable hooks
+- make Storable hooks accept data from other classes
 
 - more tests for next/previous/closest with year and nanosecond
 - use $FIELDS[0] instead of 'year'; $FIELDS[-2] instead of nanosecond
@@ -15,6 +16,8 @@ TODO file for DateTime::Incomplete
   (see SKIP in t/02incomplete.t)
 
 IDEAS
+
+* has_date / has_time
 
 * add_datetime
 
